# yace

./: README.md  configure.ac
scripts/: commit.sh
src/: Makefile.am  board.c  board.h  main.c  pieces.c
tests/: Makefile.am  checkBoardPositions.c
